[compile server, logging] Set up file logging in the Scala Compile Server, similar to how it is implemented in the JPS build process #SCL-19104
- We're not able to reuse more code from the platform simply because we need to guarantee that the code can run on JDK 8.